crates/rspyts-macros/tests/ui/self_by_value_method.rs
use rspyts::bridge;

pub struct Gauge {
    value: f64,
}

#[bridge]
impl Gauge {
    #[bridge(constructor)]
    pub fn create() -> Self {
        Self { value: 0.0 }
    }

    pub fn finish(self) -> f64 {
        self.value
    }
}

fn main() {}
